// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Native <RadioButton /> Checked should match snapshot when errorText is present 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="activeRadioButton"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(43, 131, 234, 1.0 )"
          style={
            Array [
              Object {
                "borderColor": "rgba(43, 131, 234, 1.0 )",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        >
          <View
            backgroundColor="rgba(43, 131, 234, 1.0 )"
            borderRadius="3px"
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(43, 131, 234, 1.0 )",
                  "borderRadius": 3,
                },
                Object {
                  "height": 6,
                  "width": 6,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Razorpay
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 0,
            "marginLeft": 28,
            "marginRight": 0,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        _isUnderlined={false}
        _letterSpacing="small"
        _weight="regular"
        align="left"
        color="negative.900"
        size="xsmall"
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "color": "rgba(209, 45, 45, 1.0)",
              "fontFamily": "Lato-Regular",
              "fontSize": 12,
              "letterSpacing": 0,
              "lineHeight": 18,
              "textDecorationLine": "none",
            },
          ]
        }
        testID="ds-text"
      >
        You dont have permission
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Checked should render component when checked with default props 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="ds-radio-button"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(43, 131, 234, 1.0 )"
          style={
            Array [
              Object {
                "borderColor": "rgba(43, 131, 234, 1.0 )",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        >
          <View
            backgroundColor="rgba(43, 131, 234, 1.0 )"
            borderRadius="3px"
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(43, 131, 234, 1.0 )",
                  "borderRadius": 3,
                },
                Object {
                  "height": 6,
                  "width": 6,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Some Title
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Checked snapshot testing when user long presses on RadioButton 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="activeRadioButton"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="rgba(11, 112, 231, 0.10)"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "rgba(11, 112, 231, 0.10)",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(43, 131, 234, 1.0 )"
          style={
            Array [
              Object {
                "borderColor": "rgba(43, 131, 234, 1.0 )",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        >
          <View
            backgroundColor="rgba(43, 131, 234, 1.0 )"
            borderRadius="3px"
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(43, 131, 234, 1.0 )",
                  "borderRadius": 3,
                },
                Object {
                  "height": 6,
                  "width": 6,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Razorpay
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Checked snapshot testing when user presses out 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="activeRadioButton"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(43, 131, 234, 1.0 )"
          style={
            Array [
              Object {
                "borderColor": "rgba(43, 131, 234, 1.0 )",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        >
          <View
            backgroundColor="rgba(43, 131, 234, 1.0 )"
            borderRadius="3px"
            style={
              Array [
                Object {
                  "backgroundColor": "rgba(43, 131, 234, 1.0 )",
                  "borderRadius": 3,
                },
                Object {
                  "height": 6,
                  "width": 6,
                },
              ]
            }
          />
        </View>
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Razorpay
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Unchecked RadioButton should render component when both defaultChecked and checked prop is passed with false values 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="ds-radio-button"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(22, 47, 86, 0.38)"
          style={
            Array [
              Object {
                "borderColor": "rgba(22, 47, 86, 0.38)",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Some Title
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Unchecked RadioButton should render component when checked prop is passed with value false 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="ds-radio-button"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(22, 47, 86, 0.38)"
          style={
            Array [
              Object {
                "borderColor": "rgba(22, 47, 86, 0.38)",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Some Title
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Unchecked RadioButton should render component when defaultChecked prop is passed with value false 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="ds-radio-button"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(22, 47, 86, 0.38)"
          style={
            Array [
              Object {
                "borderColor": "rgba(22, 47, 86, 0.38)",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Some Title
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Unchecked RadioButton should render component when not checked with default props 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="ds-radio-button"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(22, 47, 86, 0.38)"
          style={
            Array [
              Object {
                "borderColor": "rgba(22, 47, 86, 0.38)",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Some Title
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Unchecked RadioButton should render medium sized RadioButton 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="ds-radio-button"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(22, 47, 86, 0.38)"
          style={
            Array [
              Object {
                "borderColor": "rgba(22, 47, 86, 0.38)",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Some Title
        </Text>
      </View>
    </View>
    <View
      style={
        Array [
          Object {
            "marginBottom": 0,
            "marginLeft": 28,
            "marginRight": 0,
            "marginTop": 0,
          },
        ]
      }
    >
      <Text
        _isUnderlined={false}
        _letterSpacing="small"
        _weight="regular"
        align="left"
        color="shade.950"
        size="xsmall"
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "color": "rgba(22, 47, 86, 0.38)",
              "fontFamily": "Lato-Regular",
              "fontSize": 12,
              "letterSpacing": 0,
              "lineHeight": 18,
              "textDecorationLine": "none",
            },
          ]
        }
        testID="ds-text"
      >
        some Help text
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Unchecked RadioButton snapshot testing when user long presses on RadioButton 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="unselectedRadioButton"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="rgba(224, 228, 249, 0.24)"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "rgba(224, 228, 249, 0.24)",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(22, 47, 86, 0.38)"
          style={
            Array [
              Object {
                "borderColor": "rgba(22, 47, 86, 0.38)",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Razorpay
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`Native <RadioButton /> Unchecked RadioButton snapshot testing when user presses out 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <TouchableOpacity
    accessibilityRole="radio"
    activeOpacity={1}
    className="sc-AykKC cQCQxd"
    disabled={false}
    testID="unselectedRadioButton"
    underlayColor="transparent"
  >
    <View
      className="sc-AykKC kHnGAa"
    >
      <View
        backgroundColor="transparent"
        borderRadius="12px"
        className="sc-AykKC bQZpU"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderRadius": 12,
              "height": undefined,
              "width": undefined,
            },
            Object {
              "height": 24,
              "width": 24,
            },
          ]
        }
      >
        <View
          borderRadius="6px"
          borderWidth="1.2px"
          className="sc-AykKC bQZpU"
          color="rgba(22, 47, 86, 0.38)"
          style={
            Array [
              Object {
                "borderColor": "rgba(22, 47, 86, 0.38)",
                "borderRadius": 6,
                "borderWidth": 1.2,
              },
              Object {
                "height": 12,
                "width": 12,
              },
            ]
          }
        />
      </View>
      <View
        className="sc-AykKC bJrJEE"
        style={
          Array [
            Object {
              "marginBottom": 0,
              "marginLeft": 4,
              "marginRight": 0,
              "marginTop": 0,
            },
          ]
        }
      >
        <Text
          _isUnderlined={false}
          _letterSpacing="small"
          _weight="regular"
          align="left"
          color="shade.980"
          size="medium"
          style={
            Array [
              Object {
                "alignSelf": "flex-start",
                "color": "rgba(22, 47, 86, 0.87)",
                "fontFamily": "Lato-Regular",
                "fontSize": 14,
                "letterSpacing": 0,
                "lineHeight": 20,
                "textDecorationLine": "none",
              },
            ]
          }
          testID="ds-text"
        >
          Razorpay
        </Text>
      </View>
    </View>
  </TouchableOpacity>
</View>
`;
